# AR-based-Infrastructure-Monitoring-and-Maintenance-System

docs/: actors_and_use_cases.md  physical_erd_v1.mmd  requirements.md  schema_v1.js  (+7 more)
playground/telemetry/: .gitignore  HOST_COLLECTOR_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
playground/telemetry/configs/: assets.yaml  collector.local.yaml  metrics.yaml
playground/telemetry/scripts/: run_collector.py
playground/telemetry/src/telemetry_collector/: __init__.py  bootstrap.py  main.py
playground/telemetry/src/telemetry_collector/collectors/: __init__.py  base.py  docker_collector.py  heartbeat_collector.py  host_collector.py  network_collector.py  service_collector.py
playground/telemetry/src/telemetry_collector/config/: __init__.py  metrics.yaml  schema.py  settings.py
playground/telemetry/src/telemetry_collector/core/: __init__.py  enums.py  models.py
playground/telemetry/src/telemetry_collector/pipeline/: __init__.py  aggregator.py  deduplicator.py  enricher.py  health_score.py  normalizer.py  topology_mapper.py
playground/telemetry/src/telemetry_collector/providers/: __init__.py
playground/telemetry/src/telemetry_collector/repositories/: __init__.py  asset_repository.py  state_repository.py
playground/telemetry/src/telemetry_collector/scripts/: __init__.py
playground/telemetry/src/telemetry_collector/transports/: __init__.py  file_sink.py  http_client.py  stdout_sink.py
playground/telemetry/src/telemetry_collector/utils/: __init__.py  ids.py  units.py
playground/telemetry/tests/: test_health_score.py  test_host_collector.py
(+62 files in other folders)
